# minibox

./: Cargo.toml
src/: default.rs  lib.rs  serde.rs  trait_impls.rs
tests/: noalloc.rs  smoke.rs
