[package]
name = "minibox"
version = "0.1.0"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['std']
nightly = []
std = []

[dependencies]

[dependencies.serde]
version = '1'
optional = true
no-default-features = true

[dev-dependencies]
static-alloc = '0.2'